Timesheet/main/default/objects/Employee__c/fields/Accrual_Divisor__c.field-meta.xml
<CustomField>
    <fullName>Accrual_Divisor__c</fullName>
    <defaultValue>9</defaultValue>
    <label>Accrual Divisor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>