Timesheet/main/default/objects/Employee__c/fields/Accrual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Accrual_Start_Date__c</fullName>
    <label>Accrual Start Date</label>
    <type>Date</type>
</CustomField>