Timesheet/main/default/objects/Employee__c/fields/Client_Manager__c.field-meta.xml
<CustomField>
    <fullName>Client_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>