Timesheet/main/default/objects/Employee__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Employment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
                <default>true</default>
                <label>Full Time</label>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Internship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>