Timesheet/main/default/objects/Employee__c/fields/Employment_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type_c__c</fullName>
    <label>Employment_Type__c</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>