Timesheet/main/default/objects/Employee__c/fields/Extra_Absence_Hours__c.field-meta.xml
<CustomField>
    <fullName>Extra_Absence_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Extra Absence Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
    <inlineHelpText>Manually added extra absence hours are included in the employee's Total Absence Hours upon the approval of any timesheet.</inlineHelpText>
</CustomField>