Timesheet/main/default/objects/Employee__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>