Timesheet/main/default/objects/Employee__c/fields/No_of_Vacations_Taken__c.field-meta.xml
<CustomField>
    <fullName>No_of_Vacations_Taken__c</fullName>
    <label>No. of Vacations Taken</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>