Timesheet/main/default/objects/Employee__c/fields/Total_Absence_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Absence_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Absence Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
    <inlineHelpText>Displays the cumulative absence hours from all Approved timesheets. Any Extra Absence Hours entered are also included when newly approved timesheets are processed.</inlineHelpText>
</CustomField>