Timesheet/main/default/objects/Employee__c/fields/Total_Absence_Hours_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Absence_Hours_Available__c</fullName>
    <formula>Total_Accrued_Hours__c -  Total_Absence_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Absence Hours Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
    <inlineHelpText>Shows the employee's remaining absence balance, calculated by subtracting Total Absence Hours from Total Accrued Hours.</inlineHelpText>
</CustomField>