Timesheet/main/default/objects/Employee__c/fields/Total_Accrued_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Accrued_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Accrued Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
    <inlineHelpText>Shows the sum of accrued hours from all approved timesheets, including manually added Extra Accrued Hours, updated when any timesheet is approved.</inlineHelpText>
</CustomField>