Timesheet/main/default/objects/Employee__c/validationRules/Manager_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Manager_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( User__r.ManagerId )</errorConditionFormula>
    <errorMessage>Please Update Manager in User record</errorMessage>
</ValidationRule>